--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,6 +4,7 @@
     height: 100%;
     flex-wrap: wrap;
     padding: 0 5px 0 5px;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 1024px) {
